# SecureUnionID

./: NOTICE.txt  README.md  go.mod  interface_benchmark.rst
benchmark/: benchmark.go
bindings/go/benchmark/: benchmark.go
bindings/go/core/: core.go
bindings/go/demos/: demo.go  demo2.go  demo3.go
bindings/go/example/: adx_psi.pb.go  client.go  server.go
bindings/go/httpdemo/: ad_online_server.go  check_key.go  gen_key.go  http_client_demo.go  http_server_demo.go
bindings/java/: Demo.java  Makefile  README  README.md  SecureUnionID.i  SecureUnionID.java  SecureUnionIDJNI.java  SecureUnionID_wrap.c  secureunionid.i
bindings/java/secureunionid/: README.md  pom.xml
bindings/java/secureunionid/src/main/java/com/volcengine/secureunionid/: Demo.java  NativeLibraryLoader.java  SecureUnionID.java  SecureUnionIDJNI.java
bindings/java/secureunionid/src/main/java/com/volcengine/secureunionid/util/: Environment.java
bindings/java/secureunionidjni/: CMakeLists.txt  README.md
bindings/java/secureunionidjni/src/: SecureUnionID_wrap.c
bindings/python/: CMakeLists.txt  README.md  SecureUnionID.i  SecureUnionID.py  SecureUnionID_wrap.c  SecureUnionID_wrap_py2.c  SecureUnionID_wrap_py3.c  demo.py
core/: core.go
demos/: demo.go  demo2.go  demo3.go
didlib/BN254/: amcl.h  config_field_BN254.h  config_order_BN254.h  ecp_BN254.h  fn_BN254.c  fn_BN254.h  fp12_BN254.h  fp4_BN254.h  fp_BN254.c  hash.c  hkdf.c  hkdf.h  oct.c  pair_BN254.c  pair_BN254.h  rand.c  randapi.c  randapi.h  rom_curve_BN254.c
didlib/DID/: encryption.c  encryption.h
doc/: c_doc_cn.rst  c_doc_en.rst  go_doc_cn.rst  go_doc_en.rst  interface_benchmark_cn.rst  interface_benchmark_en.rst  java_doc_cn.rst  java_doc_en.rst  python_doc_cn.rst  python_doc_en.rst
example/: adx_psi.proto  client.go  server.go
httpdemo/: ad_online_server.go  gen_key.go  http_client_demo.go  http_server_demo.go
src/crypto/: arch.h  big_256_56.c  big_256_56.h  config_big_256_56.h  config_curve_BN254.h  ecp2_BN254.c  ecp2_BN254.h  ecp_BN254.c  fp12_BN254.c  fp2_BN254.c  fp2_BN254.h  fp4_BN254.c  fp_BN254.h  rom_field_BN254.c  rom_order_BN254.c
src/example/: CMakeLists.txt  demo.c
src/psi/: demo.c  encryption.c  encryption.h
